<resources>

    <string name="app_name">Paripper</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start">Paripper</string>
    <string name="wellcome">Push the button below to\nauthorize with Twitter.\nNo credentials are stored.</string>
    <string name="validate">Validate</string>
    <string name="tweetText">tweetText</string>
    <string name="tweetID">tweetID</string>
    <string name="tweetUser">tweetUser</string>
    <string name="tweetUserId">tweetUserId</string>
    <string name="tweetDate">tweetDate</string>
    <string name="tweetVia">tweetVia</string>
    <string name="fixedVia">\u0020via\u0020</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Refreshing Timeline</string>
    <string name="redirect_twitter">Redirecting to Twitter</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="loading_tweet_media">Loading tweet media...</string>
</resources>